[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "ievi"
description = "Information-Efficient Variational Inference"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
    {email = "mhwu@uwaterloo.ca", name = "Mohan Wu"},
    {email = "mlysy@uwaterloo.ca", name = "Martin Lysy"}
]
maintainers = [
    {email = "mlysy@uwaterloo.ca", name = "Martin Lysy"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics"
]
dependencies = [
    "jaxlib",
    "jax",
    "equinox"
    "rodeo"
]
keywords = ["jax", 
    "parameter-inference", 
    "stochastic-differential-equations", 
    "ievi", 
    "variational-inference"
]
license = "MIT"
license-files = ["LICENSE.*"]

[project.urls]
repository = "https://github.com/mlysy/sde-ievi"

[project.optional-dependencies]
docs = [
    "quartodoc"
]

[tool.setuptools.dynamic]
version = {attr = "ievi.__version__"}
