[metadata]
name = svi
version = attr: svi.__version__
author = attr: svi.__author__
author_email = mhwu@uwaterloo.ca
description = Variational Inference for SDEs
url = https://github.com/mohanwu/svi
project_urls =
    Bug Tracker = https://github.com/mohanwu/svi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    jax
    jaxlib
    equinox
    
[options.packages.find]
where = src
